--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,12 @@
       "dom.iterable",
       "esnext"
     ],
+    "baseUrl": "src",
+    "paths": {
+      "components": ["components"],
+      "pages": ["pages"],
+      "common": ["common"]
+    },
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
